<resources>

    <string name="app_name">TabletSMS</string>
    <string name="menu_settings">Settings</string>
    <string name="signin_success">You have successfully signed in!</string>
    <string name="signin_failure">Login failed. Please verify your internet connection and try again. Logging in with a Google Apps email address may not work. If the error persists, please send a log to the developer.</string>
    <string name="setting_up_push">Setting up push notifications...</string>
    <string name="retrieving_authentication">Retrieving Google authentication tokens...</string>
    <string name="registering_with_server">Registering with push server...</string>
    <string name="testing_push">Testing push notifications...</string>
    <string name="push_failed">The test push notification from your tablet to your phone failed.\n\nPlease make sure the latest version of <b>DeskSMS</b> is installed and running on your <b>phone</b>.</string>
    <string name="signin_complete">Your DeskSMS inbox is now loading.</string>
    <string name="accounts">Accounts</string>
    <string name="authentification_notification">TabletSMS was unable to log into your account. Please click to reauthenticate.</string>
    <string name="logout">Logout</string>
    <string name="send_hint">Type your message here.</string>
    <string name="send">Send</string>
    <string name="copy_text">Copy Text</string>
    <string name="delete">Delete</string>
	<string name="compose">Compose</string>
	<string name="new_messages">You have new messages.</string>
	<string name="checking_desksms">Checking DeskSMS phone version...</string>
	<string name="mark_as_read">Mark As Read</string>
	<string name="welcome">Welcome to TabletSMS by DeskSMS</string>
	<string name="welcome_info">TabletSMS lets you send text messages from your tablet through your phone.\n\nBefore starting, please make sure that:\n1) You have set up <b>DeskSMS</b> on your <b>phone</b>.\n2) You installed <b>TabletSMS</b> on your <b>tablet</b>.\n\nDone? Great! Now, let\'s log in with the Google account you used for DeskSMS.</string>
	<string name="settings">Settings</string>
	<string name="notifications">Notifications</string>
	<string name="all_messages_read">All messages have been marked as read.</string>
	<string name="no_accounts">You do not have any Google accounts set up on this device. Please log into a Google account on your phone before continuing.</string>
	<string name="messages">Messages</string>
	<string name="messages_loading">Your messages are loading. This will take a moment...</string>
	<string name="no_messages">You have no messages!</string>
	<string name="rate_me">I hope you\'ve been enjoying TabletSMS! :) If you have some time, a positive rating on Google Play would mean a lot!\n\nhttp://market.android.com/details?id=com.koushikdutta.tabletsms\n\nAnd don\'t forget to rate DeskSMS as well!\n\nhttp://market.android.com/details?id=com.koushikdutta.desktopsms\n\nHappy texting!</string>
	<string name="confirm_delete_conversation">Are you sure you want to delete this conversation? This can not be undone.</string>
</resources>