<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mark_as_read"
        android:icon="@drawable/ic_action_mark_as_read"
        android:showAsAction="always"
        android:title="@string/mark_as_read"/>
    
    <item
        android:id="@+id/compose"
        android:icon="@drawable/ic_menu_msg_compose_holo_dark"
        android:showAsAction="always"
        android:title="@string/compose"/>
    <item
        android:id="@+id/trash"
        android:icon="@drawable/ic_menu_trash_holo_dark"
        android:showAsAction="always"
        android:title="@string/delete"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        android:title="@string/settings"/>
    
    <item
        android:id="@+id/logout"
        android:showAsAction="never"
        android:title="@string/logout"/>
    
</menu>